# souper

./: Cargo.toml  soups.json
.github/: dependabot.yml
.github/workflows/: pr.yml  release.yml
src/: main.rs
src/parse/: apt.rs  cargo.rs  csproj.rs  docker_base.rs  package_json.rs
src/scan/: dir_scan.rs
src/soup/: contexts_io.rs
