[package]
name = "souper"
description = "CLI tool to manage metadata about software of unknown provinence (SOUP)"
version = "0.1.8"
homepage = "https://github.com/DeviesDevelopment/souper"
repository = "https://github.com/DeviesDevelopment/souper"
readme = "README.md"
keywords = ["soup", "iec62304", "compliance", "traceability"]
license = "MIT"

edition = "2024"
rust-version = "1.86.0"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
quick-xml = "0.38.3"
regex = "1.11.2"
lazy_static = "1.5.0"
toml = "0.9.5"

[dev-dependencies]
test-case = "3.3.1"
