[package]
name = "souper"
description = "CLI tool to manage metadata about software of unknown provinence (SOUP)"
version = "0.1.9"
homepage = "https://github.com/DeviesDevelopment/souper"
repository = "https://github.com/DeviesDevelopment/souper"
readme = "README.md"
keywords = ["soup", "iec62304", "compliance", "traceability"]
license = "MIT"

edition = "2024"
rust-version = "1.86.0"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
quick-xml = "0.38.3"
regex = "1.11.3"
lazy_static = "1.5.0"
toml = "0.9.7"

[dev-dependencies]
test-case = "3.3.1"
