[package]
name = "souper"
description = "CLI tool to manage metadata about software of unknown provinence (SOUP)"
version = "0.1.10"
homepage = "https://github.com/DeviesDevelopment/souper"
repository = "https://github.com/DeviesDevelopment/souper"
readme = "README.md"
keywords = ["soup", "iec62304", "compliance", "traceability"]
license = "MIT"

edition = "2024"
rust-version = "1.86.0"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
quick-xml = "0.39.0"
regex = "1.12.2"
lazy_static = "1.5.0"
toml = "0.9.11"

[dev-dependencies]
test-case = "3.3.1"
